--- a/index.html
+++ b/index.html
@@ -8,26 +8,29 @@
   <body>
     <div class="aaa">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="aaa__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+      <p id="top-section-for-adding-element-to-list">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper"><input id="new-task"class="task" type="text"><button>Add</button></div>
+        <div class="centered-main-page-element__task-row-wrapper">
+          <input id="new-task" class="centered-main-page-element__task" type="text">
+          <button>Add</button>
+        </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incompleteTasks">
+      <ul id="incomplete-tasks">
         <li>
           <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
+          <label class="centered-main-page-element__task">Pay Bills</label>
+          <input type="text" class="centered-main-page-element__task">
           <button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
-        <li class="editMode">
+        <li class="centered-main-page-element__editMode">
           <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
+          <label class="centered-main-page-element__task">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="centered-main-page-element__task">
           <button class="edit">Save</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
@@ -36,8 +39,8 @@
       <ul id="completed-tasks">
         <li>
           <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
+          <label class="centered-main-page-element__task">See the Doctor</label>
+          <input type="text" class="centered-main-page-element__task">
           <button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
