--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       <img src="./eisenhower-matrix.jpg">
       <a class="matrix__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="main-page">
+      <p id="add-element">
         <label for="new-task">Add Item</label>
-        <div class="centered-main-page-element__task-row-wrapper">
-          <input id="new-task" class="centered-main-page-element__task" type="text">
+        <div class="main-page__task-row-wrapper">
+          <input id="new-task" class="main-page__task" type="text">
           <button>Add</button>
         </div>
       </p>
@@ -22,15 +22,15 @@
       <ul id="incomplete-tasks">
         <li>
           <input type="checkbox">
-          <label class="centered-main-page-element__task">Pay Bills</label>
-          <input type="text" class="centered-main-page-element__task">
+          <label class="main-page__task">Pay Bills</label>
+          <input type="text" class="main-page__task">
           <button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
-        <li class="centered-main-page-element__editMode">
+        <li class="main-page__editMode">
           <input type="checkbox">
-          <label class="centered-main-page-element__task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="centered-main-page-element__task">
+          <label class="main-page__task">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="main-page__task">
           <button class="edit">Save</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
@@ -39,8 +39,8 @@
       <ul id="completed-tasks">
         <li>
           <input type="checkbox" checked>
-          <label class="centered-main-page-element__task">See the Doctor</label>
-          <input type="text" class="centered-main-page-element__task">
+          <label class="main-page__task">See the Doctor</label>
+          <input type="text" class="main-page__task">
           <button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
