--- a/index.html
+++ b/index.html
@@ -1,48 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo App</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="wrapper">
     <div class="matrix">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" class="matrix__img">
       <a class="matrix__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="main-page">
+    <div class="main">
       <p id="add-element">
-        <label for="new-task">Add Item</label>
-        <div class="main-page__new-task-wrapper">
-          <input id="new-task" class="main-page__task" type="text">
-          <button>Add</button>
+        <label class = "main__heading-new-task" for="new-task">Add Item</label>
+        <div class="main__new-task-wrapper">
+          <input class="main__input-new-task" id="new-task" type="text">
+          <button class="button">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="main-page__task">Pay Bills</label>
-          <input type="text" class="main-page__task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+      <h3 class="main__heading">Todo</h3>
+      <ul class = "main__task-list" id="incomplete-tasks">
+        <li class="main__task">
+          <input class="main__checkbox" type="checkbox">
+          <label class="main__label-task">Pay Bills</label>
+          <input class="main__input-task" type="text">
+          <button class="edit button">Edit</button>
+          <button class="delete button"><img src="./remove.svg" class = "delete__img"></button>
         </li>
-        <li class="main-page__editMode">
-          <input type="checkbox">
-          <label class="main-page__task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="main-page__task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+        <li class="edit-mode main__task">
+          <input class="main__checkbox" type="checkbox">
+          <label class="main__label-task label-edit">Go Shopping</label>
+          <input class="main__input-task input-edit" type="text" value="Go Shopping">
+          <button class="edit button">Save</button>
+          <button class="delete button"><img src="./remove.svg" class = "delete__img"></button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="main-page__task">See the Doctor</label>
-          <input type="text" class="main-page__task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+      <h3 class="main__heading">Completed</h3>
+      <ul class = "main__task-list" id="completed-tasks">
+        <li class="main__task">
+          <input class="main__checkbox" type="checkbox" checked>
+          <label class="main__label-task completed-label">See the Doctor</label>
+          <input class="main__input-task" type="text">
+          <button class="edit button">Edit</button>
+          <button class="delete button"><img src="./remove.svg" class = "delete__img"></button>
         </li>
       </ul>
     </div>
