refactor: change class according to rule 2.1 in html-and-css-extended.md v2

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
         </li>
         <li class="edit-mode main__task">
           <input class="main__checkbox" type="checkbox">
-          <label class="main__label-task label-edit">Go Shopping</label>
-          <input class="main__input-task input-edit" type="text" value="Go Shopping">
+          <label class="main__label-task">Go Shopping</label>
+          <input class="main__input-task" type="text" value="Go Shopping">
           <button class="edit button">Save</button>
           <button class="delete button"><img src="./remove.svg" class = "delete__img"></button>
         </li>
       </ul>
       <h3 class="main__heading">Completed</h3>
-      <ul class = "main__task-list" id="completed-tasks">
+      <ul class = "main__task-list completed" id="completed-tasks">
         <li class="main__task">
           <input class="main__checkbox" type="checkbox" checked>
-          <label class="main__label-task completed-label">See the Doctor</label>
+          <label class="main__label-task">See the Doctor</label>
           <input class="main__input-task" type="text">
           <button class="edit button">Edit</button>
           <button class="delete button"><img src="./remove.svg" class = "delete__img"></button>
