--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="wrapper">
     <header class="matrix">
-      <img src="./eisenhower-matrix.jpg" class="matrix__img">
+      <img src="./eisenhower-matrix.jpg" class="matrix__img" alt="Eisenhower matrix">
       <a class="matrix__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
@@ -28,14 +28,14 @@
             <label class="main__label-task">Pay Bills</label>
             <input class="main__input-task" type="text">
             <button class="edit button">Edit</button>
-            <button class="delete button"><img src="./remove.svg" class = "delete__img"></button>
+            <button class="delete button"><img src="./remove.svg" class = "delete__img" alt = "delete"></button>
           </li>
           <li class=" main__task edit-mode">
             <input class="main__checkbox" type="checkbox">
             <label class="main__label-task">Go Shopping</label>
             <input class="main__input-task" type="text" value="Go Shopping">
             <button class="edit button">Save</button>
-            <button class="delete button"><img src="./remove.svg" class = "delete__img"></button>
+            <button class="delete button"><img src="./remove.svg" class = "delete__img" alt = "delete"></button>
           </li>
         </ul>
       </section>
@@ -47,7 +47,7 @@
             <label class="main__label-task">See the Doctor</label>
             <input class="main__input-task" type="text">
             <button class="edit button">Edit</button>
-            <button class="delete button"><img src="./remove.svg" class = "delete__img"></button>
+            <button class="delete button"><img src="./remove.svg" class = "delete__img" alt = "delete"></button>
           </li>
         </ul>
       </section>
