refactor: change class name according to rule 2.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <label class = "main__heading-new-task" for="new-task">Add Item</label>
         <div class="main__new-task-wrapper">
           <input class="main__input-new-task" id="new-task" type="text">
-          <button class="button">Add</button>
+          <button class="main__button">Add</button>
         </div>
       </section>
       <section id="todo-element">
@@ -27,15 +27,15 @@
             <input class="main__checkbox" type="checkbox">
             <label class="main__label-task">Pay Bills</label>
             <input class="main__input-task" type="text">
-            <button class="edit button">Edit</button>
-            <button class="delete button"><img src="./remove.svg" class = "delete__img" alt = "delete"></button>
+            <button class="edit main__button">Edit</button>
+            <button class="delete main__button"><img src="./remove.svg" class = "delete__img" alt = "delete"></button>
           </li>
           <li class=" main__task edit-mode">
             <input class="main__checkbox" type="checkbox">
             <label class="main__label-task">Go Shopping</label>
             <input class="main__input-task" type="text" value="Go Shopping">
-            <button class="edit button">Save</button>
-            <button class="delete button"><img src="./remove.svg" class = "delete__img" alt = "delete"></button>
+            <button class="edit main__button">Save</button>
+            <button class="delete main__button"><img src="./remove.svg" class = "delete__img" alt = "delete"></button>
           </li>
         </ul>
       </section>
@@ -46,8 +46,8 @@
             <input class="main__checkbox" type="checkbox" checked>
             <label class="main__label-task">See the Doctor</label>
             <input class="main__input-task" type="text">
-            <button class="edit button">Edit</button>
-            <button class="delete button"><img src="./remove.svg" class = "delete__img" alt = "delete"></button>
+            <button class="edit main__button">Edit</button>
+            <button class="delete main__button"><img src="./remove.svg" class = "delete__img" alt = "delete"></button>
           </li>
         </ul>
       </section>
