refactor: change class name according to rule 2.1 in html-and-css-extended.md v2

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
     <title>Todo App</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="style.css" media="screen">
   </head>
   <body class="wrapper">
     <header class="matrix">
@@ -14,7 +14,7 @@
     </header>
     <main class="main">
       <section class="add-item">
-        <label class="add-item__heading-new-task" for="new-task">Add Item</label>
+        <h3 class="add-item__heading">Add Item</h3>
         <div class="add-item__new-task-wrapper">
           <input class="add-item__input-new-task" id="new-task" type="text">
           <button class="button add-item__button">Add</button>
