refactor: add tag according to rule 1.1 in html-and-css-extended.md v2

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo App</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" media="screen">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body class="wrapper">
     <header class="matrix">
@@ -42,6 +42,8 @@
             </button>
           </li>
         </ul>
+      </section>
+      <section class="items">        
         <h3 class="items__heading">Completed</h3>
         <ul class="items__task-list completed" id="completed-tasks">
           <li class="items__task">
