refactor: change class name according to rule 3.3 in html-and-css.md v2

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <main class="main">
       <section class="add-item">
         <h3 class="add-item__heading">Add Item</h3>
-        <div class="add-item__new-task-wrapper">
-          <input class="add-item__input-new-task" id="new-task" type="text">
+        <div class="add-item__wrapper">
+          <input class="add-item__input-task" id="new-task" type="text">
           <button class="button add-item__button">Add</button>
         </div>
       </section>
@@ -29,7 +29,7 @@
             <input class="items__input-task" type="text">
             <button class="button items__button_edit">Edit</button>
             <button class="button items__button_delete">
-              <img src="./remove.svg" class="button__delete-img" alt="delete">
+              <img src="./remove.svg" class="button__img" alt="delete">
             </button>
           </li>
           <li class="items__task edit-mode">
@@ -38,7 +38,7 @@
             <input class="items__input-task" type="text" value="Go Shopping">
             <button class="button items__button_edit">Save</button>
             <button class="button items__button_delete">
-              <img src="./remove.svg" class="button__delete-img" alt="delete">
+              <img src="./remove.svg" class="button__img" alt="delete">
             </button>
           </li>
         </ul>
@@ -52,7 +52,7 @@
             <input class="items__input-task" type="text">
             <button class="button items__button_edit">Edit</button>
             <button class="button items__button_delete">
-              <img src="./remove.svg" class="button__delete-img" alt="delete">
+              <img src="./remove.svg" class="button__img" alt="delete">
             </button>
           </li>
         </ul>
