refactor: correct long string according to rule 2.5 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body class="wrapper">
     <header class="matrix">
       <img src="./eisenhower-matrix.jpg" class="matrix__img" alt="Eisenhower matrix">
-      <a class="matrix__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="matrix__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
+          Want more details?</a>
     </header>
     <main class="main">
       <section class="add-item">
