--- a/index.html
+++ b/index.html
@@ -28,14 +28,18 @@
             <label class="items__label-task">Pay Bills</label>
             <input class="items__input-task" type="text">
             <button class="button items__button_edit">Edit</button>
-            <button class="delete main__button"><img src="./remove.svg" class = "delete__img" alt = "delete"></button>
+            <button class="button items__button_delete">
+              <img src="./remove.svg" class="button__delete-img" alt="delete">
+            </button>
           </li>
           <li class="items__task edit-mode">
             <input class="items__checkbox" type="checkbox">
             <label class="items__label-task">Go Shopping</label>
             <input class="items__input-task" type="text" value="Go Shopping">
             <button class="button items__button_edit">Save</button>
-            <button class="delete main__button"><img src="./remove.svg" class = "delete__img" alt = "delete"></button>
+            <button class="button items__button_delete">
+              <img src="./remove.svg" class="button__delete-img" alt="delete">
+            </button>
           </li>
         </ul>
         <h3 class="items__heading">Completed</h3>
@@ -45,7 +49,9 @@
             <label class="items__label-task">See the Doctor</label>
             <input class="items__input-task" type="text">
             <button class="button items__button_edit">Edit</button>
-            <button class="delete main__button"><img src="./remove.svg" class = "delete__img" alt = "delete"></button>
+            <button class="button items__button_delete">
+              <img src="./remove.svg" class="button__delete-img" alt="delete">
+            </button>
           </li>
         </ul>
       </section>
