--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main class="main">
       <section class="add-item">
-        <label class="add-item__heading-new-task" for="new-task">Add Item</label>
+        <h3 class="add-item__heading-new-task">Add Item</h3>
         <div class="add-item__new-task-wrapper">
           <input class="add-item__input-new-task" id="new-task" type="text">
           <button class="button add-item__button">Add</button>
