refactor: add tag according to rule 1.1 in html-and-css-extended.md v2

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             </button>
           </li>
         </ul>
+      </section>
+      <section class="items">
         <h3 class="items__heading">Completed</h3>
         <ul class="items__task-list completed" id="completed-tasks">
           <li class="items__task">
