refactor: change class name according to rule 3.3 in html-and-css.md v2

--- a/index.html
+++ b/index.html
@@ -10,37 +10,37 @@
       <img src="./eisenhower-matrix.jpg" class="matrix__img">
       <a class="matrix__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="main-page">
+    <div class="main">
       <p id="add-element">
-        <label class = "main-page__heading-new-task" for="new-task">Add Item</label>
-        <div class="main-page__new-task-wrapper">
-          <input class="main-page__input-new-task" id="new-task" type="text">
+        <label class = "main__heading-new-task" for="new-task">Add Item</label>
+        <div class="main__new-task-wrapper">
+          <input class="main__input-new-task" id="new-task" type="text">
           <button class="button">Add</button>
         </div>
       </p>
-      <h3 class="main-page__heading">Todo</h3>
-      <ul class = "main-page__task-list" id="incomplete-tasks">
-        <li class="main-page__task">
-          <input class="main-page__checkbox" type="checkbox">
-          <label class="main-page__label-task">Pay Bills</label>
-          <input class="main-page__input-task" type="text">
+      <h3 class="main__heading">Todo</h3>
+      <ul class = "main__task-list" id="incomplete-tasks">
+        <li class="main__task">
+          <input class="main__checkbox" type="checkbox">
+          <label class="main__label-task">Pay Bills</label>
+          <input class="main__input-task" type="text">
           <button class="edit button">Edit</button>
           <button class="delete button"><img src="./remove.svg" class = "delete__img"></button>
         </li>
-        <li class="edit-mode main-page__task">
-          <input class="main-page__checkbox" type="checkbox">
-          <label class="main-page__label-task label-edit">Go Shopping</label>
-          <input class="main-page__input-task input-edit" type="text" value="Go Shopping">
+        <li class="edit-mode main__task">
+          <input class="main__checkbox" type="checkbox">
+          <label class="main__label-task label-edit">Go Shopping</label>
+          <input class="main__input-task input-edit" type="text" value="Go Shopping">
           <button class="edit button">Save</button>
           <button class="delete button"><img src="./remove.svg" class = "delete__img"></button>
         </li>
       </ul>
-      <h3 class="main-page__heading">Completed</h3>
-      <ul class = "main-page__task-list" id="completed-tasks">
-        <li class="main-page__task">
-          <input class="main-page__checkbox" type="checkbox" checked>
-          <label class="main-page__label-task completed-label">See the Doctor</label>
-          <input class="main-page__input-task" type="text">
+      <h3 class="main__heading">Completed</h3>
+      <ul class = "main__task-list" id="completed-tasks">
+        <li class="main__task">
+          <input class="main__checkbox" type="checkbox" checked>
+          <label class="main__label-task completed-label">See the Doctor</label>
+          <input class="main__input-task" type="text">
           <button class="edit button">Edit</button>
           <button class="delete button"><img src="./remove.svg" class = "delete__img"></button>
         </li>
